# real_estate_auction_AI_agents

./: ML_part.ipynb  README.md  architecture.md  brief_writeup.md  property_search_result.json  pyproject.toml  rf_encoder.pkl  rf_property_model.pkl
data/: properties.csv  properties.json
data/auction_results/: auction_result.json
data/chroma_db/: chroma.sqlite3
data/raw_properties/: p001.md  p002.md  p003.md  p004.md  p005.md  p006.md  p007.md  p008.md  p009.md  p010.md  p011.md  p012.md  p013.md  p014.md  p015.md  p016.md  p017.md  p018.md  p019.md  p020.md  p021.md  p022.md  p023.md  p024.md  p025.md  p026.md  p027.md  p028.md  p029.md  p030.md  p031.md  p032.md  p033.md  p034.md  p035.md  p036.md  p037.md  p038.md  p039.md  p040.md  (+10 more)
data/search_results/: search_result.json
src/real_estate_auction/: main.py  types.py
src/real_estate_auction/crews/auction_crew/: auction_crew.py
src/real_estate_auction/crews/auction_crew/config/: agents.yaml  auction.yaml  tasks.yaml
src/real_estate_auction/crews/property_search_crew/: property_search_crew.py
src/real_estate_auction/crews/property_search_crew/config/: agents.yaml  tasks.yaml
src/real_estate_auction/rag/: rag_pipeline.py  rag_tool.py
